test/valid/test21.sl
integer i;
for i := 1 to 3 do
    print(i * 10);