test/invalid/test8.sl
string s;
for s := 1 to 5 do
    print("error");